<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".presentation.detailFragment.DetailFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_hour" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="180dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="342dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <TextView
            android:id="@+id/weatherDescription"
            style="@style/text_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_desc" />

        <TextView
            android:id="@+id/windSpeed"
            style="@style/text_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed_km" />

        <TextView
            android:id="@+id/tvHumidity"
            style="@style/text_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/tvVisibility"
            style="@style/text_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visibility_km" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTempOfDetailsMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_c"
        style="@style/temperature"
        app:layout_constraintBottom_toTopOf="@+id/rvHours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pbDetail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDataLost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_lost"
        android:visibility="invisible"
        android:textColor="@color/white"
        style="@style/TextAppearance.Material3.DisplaySmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAvrgTempDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avrgTemp"
        style="@style/temperature"
        android:textSize="@dimen/dimen_16"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvTempOfDetailsMain"
        app:layout_constraintEnd_toEndOf="@+id/tvTempOfDetailsMain"
        app:layout_constraintStart_toStartOf="@+id/tvTempOfDetailsMain" />

</androidx.constraintlayout.widget.ConstraintLayout>